// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element with default props 1`] = `
<div
  role="alert"
  style={
    Object {
      "background": "red",
    }
  }
>
  Uh Oh!
</div>
`;

exports[`Element with ref forwarding 1`] = `
<div
  style={
    Object {
      "fontSize": "16px",
    }
  }
>
  3
</div>
`;

exports[`Element with style props 1`] = `
<div
  style={
    Object {
      "fontSize": "16px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Element with style props 2`] = `
<div
  style={
    Object {
      "fontSize": "12px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Element with style props 3`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  Hey there!
</div>
`;

exports[`StyleSheeet 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "
        body {
          color: red;
        }
      ",
    }
  }
/>
`;

exports[`Styler 1`] = `
<span
  style={
    Object {
      "color": "red",
    }
  }
>
  Red!
</span>
`;
